--- a/templates/systemd-system-docker-slack-notifier-service.j2
+++ b/templates/systemd-system-docker-slack-notifier-service.j2
@@ -3,9 +3,9 @@ Description=docker-slack-notifier
 After=docker.service
 
 [Service]
-#Restart=always
-#RestartSec=10
 ExecStart={{ docker_slack_notifier_basedir }}/venv/bin/python {{ docker_slack_notifier_basedir }}/docker-slack-notifier.py {{ docker_slack_notifier_basedir }}/docker-slack-notifier.yml
+RestartSec=10
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
